<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTxtDescription"
        android:layout_width="248dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/txt_description"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTxtLocation"
        android:layout_width="221dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/txt_location"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtDescription" />

    <EditText
        android:id="@+id/editTxtConcernedTask"
        android:layout_width="219dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/hint_concerned"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtLocation" />

    <TextView
        android:id="@+id/textSetDateAndTime"
        android:layout_width="230dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:onClick="onClick"
        android:text="@string/txt_date"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtConcernedTask" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnCreateNewNote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtShowChosenDateandTime">

        <RadioGroup
            android:id="@+id/radioGroupPriority"
            android:layout_width="match_parent"
            android:layout_height="164dp">

            <RadioButton
                android:id="@+id/radioBtnVeryImportant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_radiobtn1" />

            <RadioButton
                android:id="@+id/radioBtnImportant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/txt_radiobtn2" />

            <RadioButton
                android:id="@+id/radioBtnNoImportant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_radiobtn3" />

        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/btnCreateNewNote"
        android:layout_width="112dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:text="@string/btnOk"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCancelNewNote"
        android:layout_width="117dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="4dp"
        android:text="@string/btnCancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.841"
        app:layout_constraintStart_toEndOf="@+id/btnCreateNewNote" />

    <TextView
        android:id="@+id/txtShowChosenDateandTime"
        android:layout_width="344dp"
        android:layout_height="29dp"
        android:layout_marginTop="4dp"
        android:text="@string/txt_description"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_light"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSetDateAndTime" />


</androidx.constraintlayout.widget.ConstraintLayout>